# OmegaChartCreator

./: .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  Makefile  OmegaChartCreator  README.md
doc/: compilers.md  escape.md  formats.md
src/: introPage.cpp
src/include/: common.h  occ-project.h  occ-recent.h  omgGenerator.h  omgTranslator.h
src/lib/: libnanogui.dylib
src/lib/occ-kernal/: occ-config.cpp  occ-config.h  occ-recent.cpp  occ-recent.h
src/lib/occ-register/: main.cpp
src/lib/omgCompiler/: README.md  main.cpp  omgGenerator.cpp
src/macOS/: a.out  introPage.cpp
